--- a/render.yaml
+++ b/render.yaml
@@ -9,5 +9,21 @@ services:
     envVars:
       - key: NODE_VERSION
         value: 22.16.0
-      - key: NODE_ENV
-        value: production
+      - key: GOOGLE_CLIENT_ID
+        sync: false
+      - key: GOOGLE_CLIENT_SECRET
+        sync: false
+      - key: YOUTUBE_CLIENT_ID
+        sync: false
+      - key: YOUTUBE_CLIENT_SECRET
+        sync: false
+      - key: YOUTUBE_API_KEY
+        sync: false
+      - key: MONGO_URI
+        sync: false
+      - key: NEXTAUTH_URL
+        sync: false
+      - key: NEXTAUTH_SECRET
+        sync: false
+      - key: JWT_SECRET
+        sync: false
